--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
-    "vite": "^1.0.0-rc.1",
-    "vue-cli-plugin-vuetify": "~2.0.7"
+    "vite": "^1.0.0-rc.1"
   }
 }
