reverse to vue 3

--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "vue": "^3.0.0-rc.1"
+    "vite": "^1.0.0-rc.4",
+    "vue": "^3.0.0-rc.1",
+    "vue-material": "^1.0.0-beta-15"
   },
-  "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.1",
-    "vite": "^1.0.0-rc.1"
-  }
+  "devDependencies": {}
 }
