--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "bahut",
   "version": "1.0.0",
+  "private": true,
   "description": "Best bahut in the world",
   "author": "Ed_Lac",
-  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "lint": "vue-cli-service lint",
+    "dev": "vite",
     "start": "node server.js"
   },
   "dependencies": {
@@ -15,5 +16,9 @@
     "vue": "^3.0.0-rc.1",
     "vue-material": "^1.0.0-beta-15"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@vue/cli-plugin-eslint": "^4.5.6",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0-0"
+  }
 }
